# steam-scraper

./: .gitignore  README.md  best_classifier_final.ipynb  classificator_mature_content.ipynb  hardware_labels.json  hardware_labels_2.json  main.py  mature_labels.json  pyproject.toml  rating_analysis_and_labeling.ipynb  unified_maturity_labels.json  unorganized_best.ipynb  upgrade_to_v2.py  upgrade_to_v3.py
classificators/: mature_classifier_cluster_0.pkl  mature_classifier_cluster_1.pkl  mature_classifier_cluster_10.pkl  mature_classifier_cluster_11.pkl  mature_classifier_cluster_12.pkl  mature_classifier_cluster_13.pkl  mature_classifier_cluster_14.pkl  mature_classifier_cluster_15.pkl  mature_classifier_cluster_16.pkl  mature_classifier_cluster_17.pkl  mature_classifier_cluster_18.pkl  mature_classifier_cluster_19.pkl  mature_classifier_cluster_2.pkl  mature_classifier_cluster_20.pkl  mature_classifier_cluster_21.pkl  mature_classifier_cluster_22.pkl  mature_classifier_cluster_23.pkl  mature_classifier_cluster_24.pkl  mature_classifier_cluster_3.pkl  mature_classifier_cluster_4.pkl  mature_classifier_cluster_5.pkl  mature_classifier_cluster_6.pkl  mature_classifier_cluster_7.pkl  mature_classifier_cluster_8.pkl  mature_classifier_cluster_9.pkl
data/games/: 730.json
src/steamscraper/: __init__.py  scraper.py
