[project]
name = "steamscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "matplotlib>=3.7.0",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "numpy>=1.24.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.12.0",
]
